# lostworlds-mightyquest

./: .gitignore  CREDITS.md  LICENSE  README.md  build.ps1
scripts/: host-revert.ps1  host-setup.ps1  play.ps1
src/certshim/: CMakeLists.txt  certpatch.cpp  inject.cpp
src/mqeloffline/: README.upstream.md
src/mqeloffline/Source/: Appmain.cpp  Stdinclude.hpp
src/mqeloffline/Source/Backend/: Backend.hpp  Hero.cpp  Notifications.cpp  PvPCastle.cpp  Questing.cpp  Wallet.cpp
src/mqeloffline/Source/Common/: Enumerations.hpp  Message.hpp  Structs.hpp
src/mqeloffline/Source/Configuration/: Defines.hpp
src/mqeloffline/Source/Frontend/Servers/: Gameserver.cpp  Servers.hpp
src/mqeloffline/Source/Frontend/Servers/Interfaces/: IDatagramserver.hpp  IHTTPServer.hpp  ISSLServer.hpp  IServer.hpp  IStreamserver.hpp
src/mqeloffline/Source/Frontend/Services/: AccountInformationService.cpp  AccountService.cpp  AttackSelectionService.cpp  AttackService.cpp  CastleForSaleService.cpp  HeroService.cpp  SeasonalCompetitionService.cpp  ServerCommandService.cpp  Services.hpp
src/mqeloffline/Source/Utility/: PackageFS.cpp
src/mqelserver/: CMakeLists.txt  main.cpp
